# expanto

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: main.yml
assistant/: app.py  inits.py  utils.py  vdb.py
assistant/core/: agents.py  models.py  schemas.py  service.py  tools.py
assistant/prompts/: docs_assistant_instructions.md  expanto_system_prompt.md  experiment_analyst_instructions.md  experiment_creator_instructions.md  internet_search_instructions.md  router_instructions.md  sql_expert_instructions.md
demo_and_setup/: first_experiment.py
demo_and_setup/configs/: config.toml  expanto.toml  secrets.toml
docs/: architecture.md  configuration.md  metrics.md  queries.md
metrics/: demo_expanto_metrics.yaml
queries/bigquery_example/: __entry__.j2  events.j2  events_x_testids.j2  testits.j2  user_aggregation.j2
queries/snowflake_example/: base.sql  dummy_testids.sql  events.sql  events_x_testids.sql  testids.sql  user_aggregation.sql
src/: logger_setup.py  settings.py  utils.py
src/domain/: base.py  enums.py  metrics.py  models.py  results.py
src/services/: metric_register.py
src/services/analytics/: _constants.py  calculators.py  stat_functions.py
src/services/entities/: dtos.py  handlers.py
src/services/runners/: connectors.py  executors.py  renderer.py
src/ui/: actions.py  common.py  data_loaders.py  layout.py  resources.py  state.py
src/ui/chat/: chat.py  elements.py  schemas.py  services.py
src/ui/experiments/: elements.py  inputs.py  page.py  subpages.py
src/ui/observations/: elements.py  inputs.py  page.py  subpages.py
src/ui/planner/: elements.py  inputs.py  page.py
src/ui/results/: _column_configs.py  elements.py  inputs.py  page.py  styler.py
tests/: conftest.py
tests/assets/: configs.py  entities.py  query.j2
tests/assets/metrics/: engagement_metrics.yaml  order_metrics.yaml
tests/assistant/: conftest.py  test_agents.py  test_app.py  test_inits.py  test_models.py  test_service.py  test_tools.py  test_vdb.py
tests/domain/: test_metrics.py  test_models.py  test_results.py
tests/queries/: test_sql.py
tests/services/: test_metrics_register.py
tests/services/analytics/: test_calculators.py  test_stat_functions.py
tests/services/analytics/stat_functions/: test_delta_method.py  test_srm.py  test_ttest_welch.py  test_ztest.py
tests/services/entities/: test_handlers.py
tests/services/runners/: conftest.py  test_connectors.py  test_executors.py  test_renderer.py
tests/ui/: conftest.py  test_common.py  test_experiments_pages.py  test_observations_pages.py  test_planner_page.py  test_resources.py  test_results_page.py  test_state.py
tests/ui/chat/: test_chat.py  test_chat_controller.py  test_http_service.py  test_state.py
tests/ui/common/: test_url_params.py
