[project]
name = "expanto"
version = "0.1.0a1"
description = "Experimenter Analytics Tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.10.6",
    "pydantic-settings>=2.4.0",
    "streamlit>=1.49.0",
    "sqlalchemy[asyncio]>=2.0.38",
    "aiosqlite>=0.21.0",
    "jinja2>=3.1.4",
    
    # Data
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
    "plotly>=6.0.1",
    "tabulate>=0.9.0",
    
    # Connectors
    "snowflake-connector-python>=3.13.2",
    "google-cloud-bigquery[bqstorage,pandas]>=3.31.0",
    "db-dtypes>=1.4.2",
    "pyarrow<19",
    
    # LLM
    "pydantic-ai>=0.7.0",
    "pydantic-ai-slim[duckduckgo,tavily]>=0.7.0",
    "chromadb>=1.0.5",
    "fastapi[standard]>=0.115.9",
    
    # Utilities
    "pyyaml>=6.0.2",
    "logfire[fastapi,httpx,requests,sqlalchemy]>=4.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff]
line-length = 108

[tool.ruff.lint]
select = [
    # pycodestyle, Pyflakes, pyupgrade, flake8-bugbear, flake8-simplify, isort
    "E", "F", "UP", "B", "SIM", "I"
]

[tool.pytest.ini_options]
addopts = "-m 'not integration and not slow'"
markers = [
    "slow: mark test as slow",
    "integration: mark test as integration test"
]
[tool.mypy]
plugins = ["pydantic.mypy"]
